2002-04-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendbackup.c: (optionstr): Add srvcomp-best and
	  srvcomp-fast options.

2002-04-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c (start_host): Check the todo bit before 
	  sending noop REQ.

2002-04-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (parse_options, parse_g_options): Check
	  for duplication options.
	* client-src/client_util.h (COMPR_SERVER_FAST, COMPR_SERVER_BEST):
	  Declare.
	* client-src/selfcheck.c: Check for COMPR_FAST or COMPR_BEST.

2002-04-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/selfcheck.c (host):Remove variable,use g_options->hostname.
	* client-src/sendbackup.c: Ditto.
	* client-src/sendsize.c: Ditto.

2002-04-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (parse_g_options) New function to parse
	  the global options string.
	* client-src/client_util.h (parse_g_options): Prototype.
	* client-src/selfcheck.c: use parse_g_options.
	* client-src/sendbackup.c: use parse_g_options.
	* client-src/sendsize.c: use parse_g_options.

2002-04-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

        * server-src/diskfile.c: Improve message for missing features.

2002-04-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	Add many features.
	* common-src/amfeatures.c (am_set_default_feature_set): New function 
	  to set the default features set.
	* common-src/amfeatures.h (am_set_default_feature_set): Prototype.
	* common-src/amfeatures.h: Rename amanda_feature_auth_keyword to 
	  fe_options_auth.
	* client-src/client_util.c: Check features.
	* server-src/amcheck.c: Ditto.
	* server-src/diskfile.c: Ditto.
	* server-src/driverio.c: Ditto.
	* server-src/planner.c: Ditto.
	* server-src/diskfile.h (optionstr): Change prototype.
	* client-src/sendsize.c: Fix compiler warning.

2002-04-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
